# python-types-unopy

./: .gitignore  README.rst  environment.yml  pyproject.toml  setup.py
cmds/: run_pypi_upload_test.py  run_setup_clean.py
com/sun/_pyi/accessibility/: accessible.pyi  accessible_context.pyi  accessible_event_id.pyi  accessible_event_object.pyi  accessible_relation.pyi  accessible_relation_type.pyi  accessible_role.pyi  accessible_scroll_type.pyi  accessible_state_type.pyi  accessible_table_model_change.pyi  accessible_table_model_change_type.pyi  accessible_text_type.pyi  illegal_accessible_component_state_exception.pyi  text_segment.pyi  x_accessible.pyi  x_accessible_action.pyi  x_accessible_component.pyi  x_accessible_context.pyi  x_accessible_context2.pyi  x_accessible_context3.pyi  x_accessible_editable_text.pyi  x_accessible_event_broadcaster.pyi  x_accessible_event_listener.pyi  x_accessible_extended_attributes.pyi  x_accessible_extended_component.pyi  x_accessible_group_position.pyi  x_accessible_hyperlink.pyi  x_accessible_hypertext.pyi  x_accessible_image.pyi  x_accessible_key_binding.pyi  x_accessible_multi_line_text.pyi  x_accessible_relation_set.pyi  x_accessible_selection.pyi  x_accessible_state_set.pyi  x_accessible_table.pyi  x_accessible_table_selection.pyi  x_accessible_text.pyi  x_accessible_text_attributes.pyi  x_accessible_text_markup.pyi  x_accessible_text_selection.pyi  (+2 more)
com/sun/_pyi/animations/: animate_motion.pyi  animate_physics.pyi  animate_set.pyi  animation_additive_mode.pyi  animation_calc_mode.pyi  animation_color_space.pyi  animation_end_sync.pyi  animation_fill.pyi  animation_node_type.pyi  animation_restart.pyi  animation_transform_type.pyi  animation_value_type.pyi  audio.pyi  command.pyi  event.pyi  event_trigger.pyi  iterate_container.pyi  target_properties.pyi  time_filter_pair.pyi  timing.pyi  transition_sub_type.pyi  transition_type.pyi  value_pair.pyi  x_animate.pyi  x_animate_color.pyi  x_animate_motion.pyi  x_animate_physics.pyi  x_animate_set.pyi  x_animate_transform.pyi  x_animation_listener.pyi  x_animation_node.pyi  x_animation_node_supplier.pyi  x_audio.pyi  x_command.pyi  x_iterate_container.pyi  x_parallel_time_container.pyi  x_time_container.pyi  x_transition_filter.pyi
com/sun/_pyi/auth/: invalid_argument_exception.pyi  invalid_principal_exception.pyi  sso_manager_factory.pyi  unsupported_exception.pyi  xsso_acceptor_context.pyi  xsso_context.pyi  xsso_initiator_context.pyi  xsso_manager.pyi  xsso_manager_factory.pyi  xsso_password_cache.pyi
com/sun/_pyi/awt/: accessible_button.pyi  accessible_check_box.pyi  accessible_drop_down_combo_box.pyi  accessible_drop_down_list_box.pyi  accessible_edit.pyi  accessible_icon_choice_control.pyi  accessible_list_box.pyi  accessible_list_box_list.pyi  accessible_popup_menu.pyi  accessible_scroll_bar.pyi  accessible_status_bar.pyi  accessible_status_bar_item.pyi  accessible_tab_bar.pyi  char_set.pyi  (+234 more)
com/sun/star/: __init__.py
docs/: conf.py  index.rst
resources/star/: __init__.py  __init__.pyi
(+13022 files in other folders)
